--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <body>
     <div class="container">
         <h1>🧮 Pakistan Salary & Tax Calculator</h1>
-        <p class="subtitle">Interactive Tax Calculator with Auto Salary Breakdown Generator</p>
+        <p class="subtitle">Interactive Tax Calculator with Auto Salary Breakdown Generator for Fiscal Year 2026</p>
         
         <div class="input-section">
             <div class="control-section">
